--- a/example/xtal/et/control.in
+++ b/example/xtal/et/control.in
@@ -18,4 +18,4 @@ spin                               collinear
 charge                             0
 fixed_spin_moment                  2.0
 default_initial_moment             1.0
-k_grid                             _ _ _ # This should be determined by the cell length
+k_grid                             2 4 2 # This should be modified according to cell length
